--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -1607,27 +1607,40 @@ strongElems.forEach(el => {
     table.style.tableLayout = "fixed";
 
     table.innerHTML = `
-      <thead>
-        <tr>
-          <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area/Subject</th>
-          <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
-          <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
-          <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
-        </tr>
-      </thead>
+     <thead>
+  <tr>
+    <th style="border:1px solid #000;padding:6px;width:25%;">Learning Area/Subject</th>
+    <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
+    <th style="border:1px solid #000;padding:6px;width:15%;">Code</th>
+    <th style="border:1px solid #000;padding:6px;width:20%;">Performance Level</th>
+    <th style="border:1px solid #000;padding:6px;width:25%;">Teacher Comment</th>
+  </tr>
+</thead>
+
       <tbody>
         ${Object.entries(subjectData).map(([subject, d]) => {
           const avg = Number(d.average_score);
           return `
-            <tr>
-              <td style="border:1px solid #000;padding:6px;">${subject}</td>
-            <td style="border:1px solid #000;padding:6px;text-align:center;">
-  ${avg.toFixed(2)} (${scoreToPercent(avg)}%)
-</td>
+          <tr>
+  <td style="border:1px solid #000;padding:6px;">${subject}</td>
 
-              <td style="border:1px solid #000;padding:6px;">${d.achievement_level}</td>
-              <td style="border:1px solid #000;padding:6px;">${commentFromScore(avg)}</td>
-            </tr>
+  <td style="border:1px solid #000;padding:6px;text-align:center;">
+    ${avg.toFixed(2)} (${scoreToPercent(avg)}%)
+  </td>
+
+  <td style="border:1px solid #000;padding:6px;text-align:center;">
+    ${levelScoreToRubric(avg).code}
+  </td>
+
+  <td style="border:1px solid #000;padding:6px;">
+    ${d.achievement_level}
+  </td>
+
+  <td style="border:1px solid #000;padding:6px;">
+    ${commentFromScore(avg)}
+  </td>
+</tr>
+
           `;
         }).join("")}
       </tbody>
@@ -1645,7 +1658,9 @@ strongElems.forEach(el => {
             <strong>Learner's General Performance Level</strong>
           </td>
           <td style="border:1px solid #000;padding:6px;">
-           ${overallAvg.toFixed(2)} (${scoreToPercent(overallAvg)}%) — ${overallLevel(overallAvg)}
+        ${overallAvg.toFixed(2)} (${scoreToPercent(overallAvg)}%) 
+— ${overallLevel(overallAvg)} 
+(${levelScoreToRubric(overallAvg).code})
 
           </td>
         </tr>
