--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -1655,6 +1655,14 @@ strongElems.forEach(el => {
     generalBlock.style.marginTop = "10px";
     generalBlock.style.fontSize = "12px";
 
+
+const subjectValues = Object.values(subjectData);
+
+const overallAvg =
+  subjectValues.reduce((sum, d) => sum + Number(d.average_score || 0), 0) /
+  (subjectValues.length || 1);
+
+    
     generalBlock.innerHTML = `
       <table style="width:100%;border-collapse:collapse;margin-top:6px;">
         <tr>
@@ -1663,8 +1671,6 @@ strongElems.forEach(el => {
           </td>
           <td style="border:1px solid #000;padding:6px;">
         ${overallAvg.toFixed(2)} (${scoreToPercent(overallAvg)}%) 
-— ${overallLevel(overallAvg)} 
-(${levelScoreToRubric(overallAvg).code})
 
           </td>
         </tr>
